--- a/style.css
+++ b/style.css
@@ -2,24 +2,31 @@ body {background-color:black;}
 h1{color:grey;}
 div.a {
    text-align: center;
-   width: 80em;
+   width: 400px;
+   height: auto;
+   margin: 0 auto;
    font-family: "Times New Roman", Times, serif;
 }
 div.b {
    text-align: justify;
    margin: 0 auto;
-   width: 30em;
+   width: 350px;
+   height: auto;
    font-family: Arial, Helvetica, sans-serif;
 }
 div.c {
-   text-align: center;
-   width: 68em;
+   text-align: left;
+   padding-left: 20px;
+  
    font-family: "Times New Roman", Times, serif;
 }
 div.rcorners {
   border-radius: 10px;
   background:white;
   margin: 0 auto;
+  width: 450px;
+  height: auto;
+  
   text-align : center;
  }
 
